# devclean

./: .devclean.toml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
devclean/: __init__.py  agent.py  cache.py  cli.py  config.py  config_cli.py  exceptions.py  scanner.py  settings.py  tools.py  validation.py
tests/: __init__.py  test_scanner.py  test_validation.py
