[project]
name = "devclean"
version = "0.1.0"
description = "AI-powered disk cleanup for developers on macOS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DevClean Contributors"},
]
keywords = ["cleanup", "disk-space", "developer-tools", "macos", "ai", "storage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.39.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/user/devclean"
Repository = "https://github.com/user/devclean"
Issues = "https://github.com/user/devclean/issues"
Documentation = "https://github.com/user/devclean#readme"

[project.scripts]
devclean = "devclean.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devclean"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=devclean --cov-report=html --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "D",    # pydocstyle
]

# Ignore specific rules that are problematic for our use case
ignore = [
    "E501",   # line too long (handled by formatter)
    "D107",   # missing docstring in __init__
    "D102",   # missing docstring in public method (properties don't need docs)
    "D202",   # no blank lines allowed after function docstring  
    "D413",   # missing blank line after last section (pydocstyle is strict)
    "B008",   # do not perform function calls in argument defaults (typer pattern)
    "B904",   # use raise from within except (not always needed)
    "F401",   # unused import (often needed for __init__.py)
    "F841",   # local variable assigned but never used (common in except blocks)
    "UP035",  # typing imports (we want explicit typing for clarity)
]

# Allow specific rules per file
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["F401", "D", "E722"]  # Allow bare except in tests
"devclean/scanner.py" = ["E722"]  # Allow bare except for error handling

[tool.ruff.lint.pydocstyle]
convention = "google"  # Use Google docstring convention to avoid conflicts

[tool.bandit]
# Ignore subprocess warnings - this is a system administration tool
exclude_dirs = ["tests"]
skips = ["B404", "B603", "B607", "B110", "B112"]
