[project]
name = "devclean"
version = "0.2.0"
description = "AI-powered disk cleanup for developers on macOS"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Gaurav Sood"},
]
keywords = ["cleanup", "disk-space", "developer-tools", "macos", "ai", "storage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.39.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tomlkit>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.7.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/gojiplus/devclean"
Repository = "https://github.com/gojiplus/devclean"
Issues = "https://github.com/gojiplus/devclean/issues"
Documentation = "https://github.com/gojiplus/devclean#readme"

[project.scripts]
devclean = "devclean.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devclean"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=devclean --cov-report=html --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "D",    # pydocstyle
]

# Ignore specific rules that are problematic for our use case
ignore = [
    "E501",   # line too long (handled by formatter)
    "D107",   # missing docstring in __init__
    "D102",   # missing docstring in public method (properties don't need docs)
    "D202",   # no blank lines allowed after function docstring  
    "D413",   # missing blank line after last section (pydocstyle is strict)
    "B008",   # do not perform function calls in argument defaults (typer pattern)
    "B904",   # use raise from within except (not always needed)
    "F401",   # unused import (often needed for __init__.py)
    "F841",   # local variable assigned but never used (common in except blocks)
    "UP035",  # typing imports (we want explicit typing for clarity)
]

# Allow specific rules per file
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["F401", "D", "E722"]  # Allow bare except in tests
"devclean/scanner.py" = ["E722"]  # Allow bare except for error handling

[tool.ruff.lint.pydocstyle]
convention = "google"  # Use Google docstring convention to avoid conflicts

[tool.bandit]
# Ignore subprocess warnings - this is a system administration tool
exclude_dirs = ["tests"]
skips = ["B404", "B603", "B607", "B110", "B112"]
